--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <body style="background:#ecf0f1;margin:0;padding:0;">
     <div style="text-align:center; width:100%; margin:0 auto;">
-      <div class="shareButtons" style="right:30px; top:15px;">
-      <div style="padding-top:30px; width:100%; height:50px; ">
+      <div style="padding-top:30px; width:100%; height:50px; align:center;">
         <img src="top_logo.png" width="100" border="0" style="position:relative; top:-15px;">
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px; ">
@@ -105,8 +104,7 @@
                   <a href="http://facebook.com/NewsPostApp"><span class="footerLink">NEWS POST ON FACEBOOK</span></a>
                </div>
                <div style="width:70%; padding-top:30px; float:left; text-align:left;"></div>
-            </div>
-         </div>
-    </div>
+        	</div>
+     </div>
   </body>
 </html>
