--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Hairstory</title>
+    <title>HairStory</title>
     <meta name="description" content="Content description here">
     <link rel="shortcut icon" href="appicon.png">
     <link href="base.css" rel="stylesheet" type="text/css">
@@ -26,10 +26,15 @@
               <span class="homepageMessage">First description.</span>
             </div>
             <br><br>
+            <center>
+            	<a href="http://itunes.apple.com/app/id675064803">
+                    <div class="actionButton">Get notified when it's ready!</div>
+                 </a>
+             </center>
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#1abc9c;">
+      <div class="boxWrapper" style="background:#34495e;">
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
@@ -42,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#3498db;">
+      <div class="boxWrapper" style="background:#e67e22;">
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
@@ -55,7 +60,7 @@
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#34495e;">
+      <div class="boxWrapper" style="background:#3498db;">
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell">
@@ -68,7 +73,7 @@
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#e67e22;">
+      <div class="boxWrapper" style="background:#1abc9c;">
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
@@ -81,27 +86,12 @@
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#2ecc71;">
-        <div class="boxContainer">
-          <div class="boxTable" style="float:left;" >
-            <div class="boxTableCell">
-              <span class="homepageTextTitle">Fifth section</span><br><br>
-              <span class="homepageText">Fifth section description</span>
-            </div>
-          </div>
-          <div class="boxImage" style="float:right;">
-            <img src="circle-5.png" border="0" width="300" height="300">
-          </div>
-        </div>
-      </div>
-      <div class="boxWrapper" style="background:#95a5a6;height:210px;">
+      <div class="boxWrapper" style="background:#FFF;height:210px;">
             <div class="boxContainer">
                <div style="width:30%; padding-top:30px; float:left; text-align:left;">
                   <a href="http://newspo.st/support"><span class="footerLink">SUPPORT</span></a><br>
                   <a href="newspost-presskit.zip"><span class="footerLink">PRESS KIT</span></a><br>
                   <a href="contacts.html"><span class="footerLink">CONTACTS</span></a><br>
-                  <a href="http://twitter.com/newspostapp"><span class="footerLink">NEWS POST ON TWITTER</span></a><br>
-                  <a href="http://facebook.com/NewsPostApp"><span class="footerLink">NEWS POST ON FACEBOOK</span></a>
                </div>
                <div style="width:70%; padding-top:30px; float:left; text-align:left;"></div>
         	</div>
