Added fonts and styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HairStory</title>
     <meta name="description" content="Content description here">
     <link rel="shortcut icon" href="appicon.png">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,500' rel='stylesheet' type='text/css'>
     <link href="base.css" rel="stylesheet" type="text/css">
   </head>
 
@@ -38,12 +39,12 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
-              <span class="homepageTextTitle">First section</span><br><br>
-              <span class="homepageText">First section description</span>
+              <span class="homepageTextTitle">Salons, Barbershops, & Beauty Shops</span><br><br>
+              <span class="homepageText">Create <b>hair profiles</b> with your <b>personal preferences</b> including pictures, guards, cut lengths, and styles.</span>
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="circle-1a.png" border="0" width="300" height="300">
+            <img src="test.png" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -51,8 +52,8 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
-              <span class="homepageTextTitle">Second section</span><br><br>
-              <span class="homepageText">Second section description</span>
+              <span class="homepageTextTitle">Customers</span><br><br>
+              <span class="homepageText">Create your profile quickly in the app or at <a href="#">[m.]hairstoryapp.com</a> and share with your barber. Take photos of great cuts with notes so you never have to remember what you liked a month ago.</span>
             </div>
           </div>
           <div class="boxImage" style="float:left;">
@@ -88,7 +89,7 @@
       </div>
       <div class="boxWrapper" style="background:#FFF;height:210px;">
             <div class="boxContainer">
-               <div style="width:30%; padding-top:30px; float:left; text-align:left;">
+               <div style="width:30%; padding-top:30px; float:left;">
                   <a href="http://newspo.st/support"><span class="footerLink">SUPPORT</span></a><br>
                   <a href="newspost-presskit.zip"><span class="footerLink">PRESS KIT</span></a><br>
                   <a href="contacts.html"><span class="footerLink">CONTACTS</span></a><br>
