--- a/index.html
+++ b/index.html
@@ -88,14 +88,15 @@
         </div>
       </div>
       <div class="boxWrapper" style="background:#FFF;height:210px;">
-            <div class="boxContainer">
-               <div style="width:30%; padding-top:30px; float:left;">
-                  <a href="http://newspo.st/support"><span class="footerLink">SUPPORT</span></a><br>
-                  <a href="newspost-presskit.zip"><span class="footerLink">PRESS KIT</span></a><br>
-                  <a href="contacts.html"><span class="footerLink">CONTACTS</span></a><br>
-               </div>
-               <div style="width:70%; padding-top:30px; float:left; text-align:left;"></div>
-        	</div>
+        <div class="boxContainer">
+            <table id="footerTable">
+              <tr>
+                <td><a href="http://newspo.st/support"><span class="footerLink">ABOUT HAIRSTORY</span></a></td>
+                <td><a href="newspost-presskit.zip"><span class="footerLink">CONTACT US</span></a></td>
+                <td><a href="contacts.html"><span class="footerLink">TERMS OF USE</span></a></td>
+              </tr>
+            </table>
+      	</div>
      </div>
   </body>
 </html>
