Add new section

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
-              <span class="homepageTextTitle">Salons, Barbershops, & Beauty Shops</span><br><br>
-              <span class="homepageText">Create <b>hair profiles</b> with your <b>personal preferences</b> including pictures, guards, cut lengths, and styles.</span>
+              <span class="homepageTextTitle">Bringing you and your hair stylist together</span><br><br>
+              <span class="homepageText">We help you <b>better communicate</b> your preferences to your hair stylist. With our hair profiles, you can build all of your <b>personal preferences</b> including photos, guards, cut lengths, and styles.</span>
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="test.png" border="0" width="300" height="300">
+            <img src="flat-apple-devices.png" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -52,8 +52,8 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
-              <span class="homepageTextTitle">Customers</span><br><br>
-              <span class="homepageText">Create your profile quickly in the app or at <a href="#">[m.]hairstoryapp.com</a> and share with your barber. Take photos of great cuts with notes so you never have to remember what you liked a month ago.</span>
+              <span class="homepageTextTitle">Salons, Barbershops, & Beauty Shops</span><br><br>
+              <span class="homepageText">With your clients' <b>hair profile</b> in hand, data comes to life helping to bridge the <b>communication gap</b> between you and your client.</span>
             </div>
           </div>
           <div class="boxImage" style="float:left;">
@@ -65,7 +65,7 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell">
-              <span class="homepageTextTitle">Third section</span><br><br>
+              <span class="homepageTextTitle">Customers</span><br><br>
               <span class="homepageText">Third section description</span>
             </div>
           </div>
