Footer table smaller and edit text

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#FFF;height:210px;">
+      <div class="boxWrapper" style="background:#FFF;height:100px;">
         <div class="boxContainer">
             <table id="footerTable">
               <tr>
-                <td><a href="http://newspo.st/support"><span class="footerLink">ABOUT HAIRSTORY</span></a></td>
+                <td><a href="http://newspo.st/support"><span class="footerLink">ABOUT</span></a></td>
                 <td><a href="newspost-presskit.zip"><span class="footerLink">CONTACT US</span></a></td>
                 <td><a href="contacts.html"><span class="footerLink">TERMS OF USE</span></a></td>
               </tr>
