--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
               <span class="homepageTextTitle">Bringing you and your hair stylist together</span><br><br>
-              <span class="homepageText">We help you <b>better communicate</b> your preferences to your hair stylist. With our hair profiles, you can build all of your <b>personal preferences</b> including photos, guards, cut lengths, and styles.</span>
+              <span class="homepageText">We help you <b>better communicate</b> your preferences to your hair stylist. With our hair profiles, you can build all of your <b>personal preferences</b> including photos, guards, cut lengths, and styles.<br><br>Review your profile.</span>
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="flat-apple-devices.png" border="0" width="300" height="300">
+            <img src="test.png" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -88,14 +88,15 @@
         </div>
       </div>
       <div class="boxWrapper" style="background:#FFF;height:210px;">
-            <div class="boxContainer">
-               <div style="width:30%; padding-top:30px; float:left;">
-                  <a href="http://newspo.st/support"><span class="footerLink">SUPPORT</span></a><br>
-                  <a href="newspost-presskit.zip"><span class="footerLink">PRESS KIT</span></a><br>
-                  <a href="contacts.html"><span class="footerLink">CONTACTS</span></a><br>
-               </div>
-               <div style="width:70%; padding-top:30px; float:left; text-align:left;"></div>
-        	</div>
+        <div class="boxContainer">
+            <table id="footerTable">
+              <tr>
+                <td><a href="http://newspo.st/support"><span class="footerLink">ABOUT HAIRSTORY</span></a></td>
+                <td><a href="newspost-presskit.zip"><span class="footerLink">CONTACT US</span></a></td>
+                <td><a href="contacts.html"><span class="footerLink">TERMS OF USE</span></a></td>
+              </tr>
+            </table>
+      	</div>
      </div>
   </body>
 </html>
