Add email input box to main div and footer

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
               <span class="homepageMessage">First description.</span>
             </div>
             <br><br>
+         
             <center>
-            	<a href="http://itunes.apple.com/app/id675064803">
+              <input class="inputMain" type="email" placeholder="Enter your email here"/>
+            	<a href="#">
                     <div class="actionButton">Get notified when it's ready!</div>
                  </a>
              </center>
-          </div>
+           </div>
         </div>
       </div>
       <div class="boxWrapper" style="background:#34495e;">
@@ -88,12 +90,21 @@
         </div>
       </div>
       <div class="boxWrapper" style="background:#FFF;height:100px;">
-        <div class="boxContainer">
+        <div class="boxContainer" style="width:75%">
             <table id="footerTable">
               <tr>
-                <td><a href="http://newspo.st/support"><span class="footerLink">ABOUT</span></a></td>
-                <td><a href="newspost-presskit.zip"><span class="footerLink">CONTACT US</span></a></td>
-                <td><a href="contacts.html"><span class="footerLink">TERMS OF USE</span></a></td>
+                <td class="footerTD" style="width:40%;">
+                  <a href="#"><span class="footerLink">ABOUT</span></a>
+                  <a href="#"><span class="footerLink">CONTACT US</span></a>
+                  <a href="#"><span class="footerLink">TERMS OF USE</span></a>
+                </td>
+                <td class="footerTD" style="width:25%;"></td>
+                <td class="footerTD" style="width:25%;">
+                  <input class="inputFooter" type="email" placeholder="Enter your email here"/>
+                </td>
+                <td class="footerTD" style="width:10%;">
+                  <a href="#"><div class="actionButtonMini">Get notified!</div></a>
+                </td>
               </tr>
             </table>
       	</div>
