Added copy content to top 2 divs

--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
           <div style="float:left; text-align:left;">
             &nbsp;
           </div>
-          <div style="float:right; text-align:center;width:67%;">
+          <div style="float:right; text-align:right;width:67%;">
             <div style="margin-top:40px;">
-              <span class="homepageMessageTitle">Intro text</span><br><br><br><br>
-              <span class="homepageMessage">First description.</span>
+              <span class="homepageMessageTitle">Create, save, and share all your haircut preferences with any haircare professional in seconds</span><br><br><br><br>
+             
             </div>
             <br><br>
          
             <center>
-              <input class="inputMain" type="email" placeholder="Enter your email here"/>
+              <input class="inputMain" type="email" placeholder="Enter your email here"/><br>
             	<a href="#">
                     <div class="actionButton">Get notified when it's ready!</div>
-                 </a>
+                 </a><br><br>
+              <span class="homepageMessage">Available in Spring 2014 for web, {i0S}, and {Android}.</span>
              </center>
            </div>
         </div>
@@ -41,7 +42,7 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
-              <span class="homepageTextTitle">Bringing you and your hair stylist together</span><br><br>
+              <span class="homepageTextTitle">Eliminate your haircare problems - for barbershops, salons, beauty shops, clients, and more!</span><br><br>
               <span class="homepageText">We help you <b>better communicate</b> your preferences to your hair stylist. With our hair profiles, you can build all of your <b>personal preferences</b> including photos, guards, cut lengths, and styles.<br><br>Review your profile.</span>
             </div>
           </div>
