--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             	<a href="#">
                     <div class="actionButton">Get notified when it's ready!</div>
                  </a><br><br>
-              <span class="homepageMessage">Available in Spring 2014 for web, {i0S}, and {Android}.</span>
+              <span class="homepageMessage">Available in Spring 2014 for web, {iOS}, and {Android}.</span>
              </center>
            </div>
         </div>
@@ -42,8 +42,9 @@
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
-              <span class="homepageTextTitle">Eliminate your haircare problems - for barbershops, salons, beauty shops, clients, and more!</span><br><br>
-              <span class="homepageText">We help you <b>better communicate</b> your preferences to your hair stylist. With our hair profiles, you can build all of your <b>personal preferences</b> including photos, guards, cut lengths, and styles.<br><br>Review your profile.</span>
+              <span class="homepageTextTitle">For barbershops, salons, beauty shops, clients, and more!</span><br><br>
+              <span class="homepageText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your hair stylist. 
+              In seconds, save and share your <b>personal preferences</b> to your HairStory profile: photos, guards, cut lengths, custom styles, and more!<br></span>
             </div>
           </div>
           <div class="boxImage" style="float:right;">
