Change email placeholders

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br><br>
          
             <center>
-              <input class="inputMain" type="email" placeholder="Enter your email here"/>
+              <input class="inputMain" type="email" placeholder="example@example.com"/>
             	<a href="#">
                     <div class="actionButton">Get notified when it's ready!</div>
                  </a>
@@ -100,7 +100,7 @@
                 </td>
                 <td class="footerTD" style="width:25%;"></td>
                 <td class="footerTD" style="width:25%;">
-                  <input class="inputFooter" type="email" placeholder="Enter your email here"/>
+                  <input class="inputFooter" type="email" placeholder="example@example.com"/>
                 </td>
                 <td class="footerTD" style="width:10%;">
                   <a href="#"><div class="actionButtonMini">Get notified!</div></a>
