Edit all divs copy and placeholders

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <br><br>
          
             <center>
-              <input class="inputMain" type="email" placeholder="example@example.com"/>
+              <input class="inputMain" type="email" placeholder="email@address.com"/>
             	<a href="#">
                     <div class="actionButton">Get notified when it's ready!</div>
                  </a><br><br>
@@ -43,7 +43,7 @@
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell" >
               <span class="homepageTextTitle">Eliminate your haircut woes</span><br><br>
-              <span class="homepageText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your hair stylist. 
+              <span class="homepageText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your hair care provider. 
               In seconds, save and share your <b>personal preferences</b> to your HairStory profile.<br></span>
             </div>
           </div>
@@ -57,7 +57,7 @@
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
               <span class="homepageTextTitle">Salons, Barbershops, & Beauty Shops</span><br><br>
-              <span class="homepageText">With your clients' <b>hair profile</b> in hand, data comes to life helping to bridge the <b>communication gap</b> between you and your client. We present your clients' preferences to you with just the right level of detail - photos, guards, cut lengths, custom styles, and more!</span>
+              <span class="homepageText">With your client's <b>hair profile</b> in hand, data comes to life helping to bridge the <b>communication gap</b> between you and your customers. We present your clients' preferences to you with just the right level of detail - photos, guards, cut lengths, custom styles, and more!</span>
             </div>
           </div>
           <div class="boxImage" style="float:left;">
@@ -70,7 +70,7 @@
           <div class="boxTable" style="float:left;" >
             <div class="boxTableCell">
               <span class="homepageTextTitle">Customers</span><br><br>
-              <span class="homepageText">Create your profile with our easy to use app to share with your haircare professional. Take <b>photos</b> after each visit to create a <b>personal catalog</b> of past looks so you never have to explain what you liked a month ago.</span>
+              <span class="homepageText">Create your profile with our easy to use app and share with your haircare professional. Take <b>photos</b> after each visit to create a <b>personal catalog</b> of past looks so you never have to explain what you liked a month ago.</span>
             </div>
           </div>
           <div class="boxImage" style="float:right;">
@@ -102,7 +102,7 @@
                 </td>
                 <td class="footerTD" style="width:25%;"></td>
                 <td class="footerTD" style="width:25%;">
-                  <input class="inputFooter" type="email" placeholder="example@example.com"/>
+                  <input class="inputFooter" type="email" placeholder="email@address.com"/>
                 </td>
                 <td class="footerTD" style="width:10%;">
                   <a href="#"><div class="actionButtonMini">Get notified!</div></a>
