Add social sharing butons and move action mini

--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
               <span class="homepageTextTitle">Stay updated</span><br><br>
-              <span class="homepageText">Find us on Facebook and Twitter to receive the latest updates on our progress. Sign up now and you'll receive and invite to be one of our first users.</span>
+              <span class="homepageText">Find us on Facebook and Twitter to receive the latest updates on our progress. Sign up now and you'll receive and invite to be one of our first users.</span><br>
+              <div style="float:left;width:68%;vertical-align:middle;text-align:center;margin-top:20px;">
+                <input class="inputFooter" type="email" placeholder="email@address.com"/>
+              </div>
+              <div style="float:right;width:28%;vertical-align:middle;text-align:center;margin-top:20px;">
+                <a href="#"><div class="actionButtonMini">Get notified!</div></a>
+              </div>
             </div>
           </div>
           <div class="boxImage" style="float:left;">
@@ -101,11 +107,31 @@
                   <a href="#"><span class="footerLink">TERMS OF USE</span></a>
                 </td>
                 <td class="footerTD" style="width:25%;"></td>
-                <td class="footerTD" style="width:25%;">
-                  <input class="inputFooter" type="email" placeholder="email@address.com"/>
-                </td>
-                <td class="footerTD" style="width:10%;">
-                  <a href="#"><div class="actionButtonMini">Get notified!</div></a>
+                <td class="footerTD" style="width:35%;">
+                    <!-- AddToAny BEGIN -->
+                    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                    <a class="a2a_dd" href="http://www.addtoany.com/share_save?linkurl=http%3A%2F%2Fwww.hairstoryapp.com%2F&amp;linkname=HairStory"></a>
+                    <a class="a2a_button_email"></a>
+                    <a class="a2a_button_facebook"></a>
+                    <a class="a2a_button_twitter"></a>
+                    <a class="a2a_button_google_plus"></a>
+                    <a class="a2a_button_pinterest"></a>
+                    <a class="a2a_button_reddit"></a>
+                    <a class="a2a_button_tumblr"></a>
+                    <a class="a2a_button_linkedin"></a>
+                    </div>
+                    <script type="text/javascript">
+                    var a2a_config = a2a_config || {};
+                    a2a_config.linkname = "HairStory";
+                    a2a_config.linkurl = "http://www.hairstoryapp.com/";
+                    a2a_config.color_main = "D7E5ED";
+                    a2a_config.color_border = "AECADB";
+                    a2a_config.color_link_text = "333333";
+                    a2a_config.color_link_text_hover = "333333";
+                    </script>
+                    <script type="text/javascript" src="http://static.addtoany.com/menu/page.js"></script>
+                    <!-- AddToAny END -->
+
                 </td>
               </tr>
             </table>
