Add container .svg images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="test.png" border="0" width="300" height="300">
+            <img src="images/box1_sign.svg" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="boxImage" style="float:left;">
-            <img src="circle-2.png" border="0" width="300" height="300">
+            <img src="images/box2_circular.svg" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="circle-3.png" border="0" width="300" height="300">
+            <img src="images/box3_circular.svg" border="0" width="300" height="300">
           </div>
         </div>
       </div>
