Minor css tweaks

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
       </div>
-      <div class="boxWrapper" style="background:#1abc9c;">
+      <div class="boxWrapper" style="background:#029C40;">
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
             <div class="boxTableCell">
