--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <link href="base.css" rel="stylesheet" type="text/css">
   </head>
 
+<!-- END   HEAD -->
+<!-- BEGIN BODY -->
+
   <body style="background:#ecf0f1;margin:0;padding:0;">
     <div style="text-align:center; width:100%; margin:0 auto;">
       <div style="padding-top:30px; width:100%; height:50px; align:center;">
         <img src="top_logo.png" width="100" border="0" style="position:relative; top:-15px;">
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px; ">
-        <div id="container" style="width:960px; margin:0 auto; height:450px; position:relative;">
+        <div id="container">
           <img src="firstPicture.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
-          <div style="float:left; text-align:left;">
-            &nbsp;
-          </div>
+            <br />
           <div style="float:right; text-align:right;width:67%;">
             <div>
               <span class="homepageMessageTitle">Create, save, and share all your haircut preferences with any <br>haircare professional in seconds</span>
@@ -38,13 +39,17 @@
            </div>
         </div>
       </div>
+
+<!-- END   BODY HEADER DIV -->
+<!-- BEGIN BODY CONTENT DIV 1 -->
+
       <div class="boxWrapper" style="background:#34495e;">
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
-            <div class="boxTableCell" >
-              <span class="homepageTextTitle">Eliminate your haircut woes</span><br><br>
+            <div class="boxTableCell">
+              <span class="homepageTextTitle">Eliminate your haircut woes</span><br /><br />
               <span class="homepageText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your haircare provider. 
-              In seconds, save and share your <b>personal preferences</b> to your HairStory profile.<br></span>
+              In seconds, save and share your <b>personal preferences</b> to your HairStory profile.<br /></span>
             </div>
           </div>
           <div class="boxImage" style="float:right;">
