Add new images and About template

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px; ">
         <div id="container" style="width:960px; margin:0 auto; height:450px; position:relative;">
-          <img src="firstPicture.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
+          <img src="box0_image.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
           <div style="float:left; text-align:left;">
             &nbsp;
           </div>
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="images/box1_sign.svg" border="0" width="300" height="300">
+            <img src="images/box1_image.svg" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="boxImage" style="float:left;">
-            <img src="images/box2_circular.svg" border="0" width="300" height="300">
+            <img src="images/box2_image.svg" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="boxImage" style="float:right;">
-            <img src="images/box3_circular.svg" border="0" width="300" height="300">
+            <img src="images/box3_image.svg" border="0" width="300" height="300">
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
             <table id="footerTable">
               <tr>
                 <td class="footerTD" style="width:40%;">
-                  <a href="#"><span class="footerLink">ABOUT</span></a>
+                  <a href="about.html"><span class="footerLink">ABOUT</span></a>
                   <a href="#"><span class="footerLink">CONTACT US</span></a>
                   <a href="#"><span class="footerLink">TERMS OF USE</span></a>
                 </td>
