--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div style="width:100%; margin:0 auto; margin-top:40px; margin-bottom:120px;">
         <div id="container">
-          <img src="box0_image.png" border="0" style="position:absolute; top:-40px; left:0px; height:600px;">
+          <img src="images/box0_image.png" border="0" style="position:absolute; top:-50px; left:-120px; height:500px; width:auto;">
             <br />
           <div style="float:right; text-align:right;width:67%;">
             <div>
