--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
           </div>
         </div>
       </div>
+
+<!-- END   BODY CONTENT DIV 1 -->
+<!-- BEGIN BODY CONTENT DIV 2 -->
+
       <div class="boxWrapper" style="background:#e67e22;">
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
@@ -70,6 +74,10 @@
           </div>
         </div>
       </div>
+
+<!-- END   BODY CONTENT DIV 2 -->
+<!-- BEGIN BODY CONTENT DIV 3 -->
+
       <div class="boxWrapper" style="background:#3498db;">
         <div class="boxContainer">
           <div class="boxTable" style="float:left;" >
@@ -83,6 +91,10 @@
           </div>
         </div>
       </div>
+
+<!-- END   BODY CONTENT DIV 3 -->
+<!-- BEGIN BODY CONTENT DIV 4 -->
+
       <div class="boxWrapper" style="background:#029C40;">
         <div class="boxContainer">
           <div class="boxTable" style="float:right;" >
@@ -102,6 +114,10 @@
           </div>
         </div>
       </div>
+
+<!-- END   BODY CONTENT DIV 3 -->
+<!-- BEGIN BODY FOOTER -->
+
       <div class="boxWrapper" style="background:#FFF;height:100px;">
         <div class="boxContainer" style="width:75%">
             <table id="footerTable">
