Edit footer, add Home

--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
         <div class="boxContainer" style="width:75%">
             <table id="footerTable">
               <tr>
-                <td class="footerTD" style="width:40%;">
+                <td class="footerTD" style="width:50%;">
+                  <a href="index.html"><span class="footerLink">HOME</span></a>
                   <a href="about.html"><span class="footerLink">ABOUT</span></a>
                   <a href="#"><span class="footerLink">CONTACT US</span></a>
                   <a href="#"><span class="footerLink">TERMS OF USE</span></a>
                 </td>
-                <td class="footerTD" style="width:25%;"></td>
-                <td class="footerTD" style="width:35%;">
-                    <!-- AddToAny BEGIN -->
+                <td class="footerTD" style="width:50%;text-align:right;">
+                  <!-- AddToAny BEGIN -->
+                  <div style="float:right;">
                     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
                     <a class="a2a_dd" href="http://www.addtoany.com/share_save?linkurl=http%3A%2F%2Fwww.hairstoryapp.com%2F&amp;linkname=HairStory"></a>
                     <a class="a2a_button_email"></a>
@@ -151,8 +152,8 @@
                     a2a_config.color_link_text_hover = "333333";
                     </script>
                     <script type="text/javascript" src="http://static.addtoany.com/menu/page.js"></script>
-                    <!-- AddToAny END -->
-
+                  <!-- AddToAny END -->
+                  </div>
                 </td>
               </tr>
             </table>
