CSS refactoring, cleaning up, whitespace

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <td class="footerTD" style="width:50%;">
                   <a href="index.html"><span class="footerLink">HOME</span></a>
                   <a href="about.html"><span class="footerLink">ABOUT</span></a>
-                  <a href="#"><span class="footerLink">CONTACT US</span></a>
+                  <a href="mailto:info@hairstoryapp.com"><span class="footerLink">CONTACT US</span></a>
                   <a href="#"><span class="footerLink">TERMS OF USE</span></a>
                 </td>
                 <td class="footerTD" style="width:50%;text-align:right;">
