Commit for necessary merge

--- a/index-rf.html
+++ b/index-rf.html
@@ -11,16 +11,16 @@
     <link href="stylesheet/base-rf.css" rel="stylesheet" type="text/css">
   </head>
 
-<body style="background:#ECF0F1">
+<body>
   <header class="index">
     <div id="headerLogo">
       <a href="index.html"><span class="logo">HairStory</span></a>
     </div>
     <div id="headerDiv">
-
+    <br />
     </div>
   </header>
-  
+
   <div id="content">
     <div id="div1" class="contentDiv">
 
